src/snapshots/ruff__linter__tests__B005_B005.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
  s = "qwe"
  s.strip(s)  # no warning
  s.strip("we")  # no warning
| s.strip(".facebook.com")  # warning
|> Using `.strip()` with multi-character strings is misleading the reader.
  s.strip("e")  # no warning
  s.strip("\n\t ")  # no warning
| s.strip(r"\n\t ")  # warning
|> Using `.strip()` with multi-character strings is misleading the reader.
  s.lstrip(s)  # no warning
  s.lstrip("we")  # no warning
| s.lstrip(".facebook.com")  # warning
|> Using `.strip()` with multi-character strings is misleading the reader.
  s.lstrip("e")  # no warning
  s.lstrip("\n\t ")  # no warning
| s.lstrip(r"\n\t ")  # warning
|> Using `.strip()` with multi-character strings is misleading the reader.
  s.rstrip(s)  # no warning
  s.rstrip("we")  # warning
| s.rstrip(".facebook.com")  # warning
|> Using `.strip()` with multi-character strings is misleading the reader.
  s.rstrip("e")  # no warning
  s.rstrip("\n\t ")  # no warning
| s.rstrip(r"\n\t ")  # warning
|> Using `.strip()` with multi-character strings is misleading the reader.
  
  from somewhere import other_type, strip
  
  strip("we")  # no warning
  other_type().lstrip()  # no warning
  other_type().rstrip(["a", "b", "c"])  # no warning
  other_type().strip("a", "b")  # no warning

