src/snapshots/ruff__linter__tests__B006_B006.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: MutableArgumentDefault
  location:
    row: 4
    column: 22
  end_location:
    row: 4
    column: 24
  fix: ~
- kind: MutableArgumentDefault
  location:
    row: 8
    column: 22
  end_location:
    row: 8
    column: 24
  fix: ~
- kind: MutableArgumentDefault
  location:
    row: 12
    column: 21
  end_location:
    row: 12
    column: 23
  fix: ~
- kind: MutableArgumentDefault
  location:
    row: 16
    column: 19
  end_location:
    row: 16
    column: 25
  fix: ~
- kind: MutableArgumentDefault
  location:
    row: 20
    column: 19
  end_location:
    row: 20
    column: 25
  fix: ~
- kind: MutableArgumentDefault
  location:
    row: 24
    column: 18
  end_location:
    row: 24
    column: 23
  fix: ~
- kind: MutableArgumentDefault
  location:
    row: 28
    column: 22
  end_location:
    row: 28
    column: 47
  fix: ~
- kind: MutableArgumentDefault
  location:
    row: 32
    column: 17
  end_location:
    row: 32
    column: 38
  fix: ~
- kind: MutableArgumentDefault
  location:
    row: 36
    column: 22
  end_location:
    row: 36
    column: 47
  fix: ~
- kind: MutableArgumentDefault
  location:
    row: 40
    column: 15
  end_location:
    row: 40
    column: 34
  fix: ~
- kind: MutableArgumentDefault
  location:
    row: 44
    column: 19
  end_location:
    row: 44
    column: 43
  fix: ~
- kind: MutableArgumentDefault
  location:
    row: 48
    column: 19
  end_location:
    row: 48
    column: 46
  fix: ~
- kind: MutableArgumentDefault
  location:
    row: 52
    column: 18
  end_location:
    row: 52
    column: 42
  fix: ~
- kind: MutableArgumentDefault
  location:
    row: 56
    column: 25
  end_location:
    row: 56
    column: 27
  fix: ~

