src/snapshots/ruff__linter__tests__B006_B006_B008.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: MutableArgumentDefault
  location:
    row: 60
    column: 25
  end_location:
    row: 60
    column: 34
  fix: ~
- kind: MutableArgumentDefault
  location:
    row: 64
    column: 30
  end_location:
    row: 64
    column: 32
  fix: ~
- kind: MutableArgumentDefault
  location:
    row: 68
    column: 20
  end_location:
    row: 68
    column: 25
  fix: ~
- kind: MutableArgumentDefault
  location:
    row: 72
    column: 20
  end_location:
    row: 72
    column: 45
  fix: ~
- kind: MutableArgumentDefault
  location:
    row: 76
    column: 32
  end_location:
    row: 76
    column: 57
  fix: ~
- kind: MutableArgumentDefault
  location:
    row: 80
    column: 26
  end_location:
    row: 80
    column: 45
  fix: ~
- kind: MutableArgumentDefault
  location:
    row: 85
    column: 46
  end_location:
    row: 85
    column: 70
  fix: ~
- kind: MutableArgumentDefault
  location:
    row: 89
    column: 46
  end_location:
    row: 89
    column: 73
  fix: ~
- kind: MutableArgumentDefault
  location:
    row: 93
    column: 45
  end_location:
    row: 93
    column: 69
  fix: ~
- kind: MutableArgumentDefault
  location:
    row: 97
    column: 33
  end_location:
    row: 97
    column: 35
  fix: ~
- kind: MutableArgumentDefault
  location:
    row: 170
    column: 20
  end_location:
    row: 170
    column: 49
  fix: ~

