src/snapshots/ruff__linter__tests__B007_B007.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    UnusedLoopControlVariable: i
  location:
    row: 6
    column: 5
  end_location:
    row: 6
    column: 6
  fix:
    patch:
      content: _i
      location:
        row: 6
        column: 5
      end_location:
        row: 6
        column: 6
    applied: false
- kind:
    UnusedLoopControlVariable: k
  location:
    row: 18
    column: 13
  end_location:
    row: 18
    column: 14
  fix:
    patch:
      content: _k
      location:
        row: 18
        column: 13
      end_location:
        row: 18
        column: 14
    applied: false
- kind:
    UnusedLoopControlVariable: i
  location:
    row: 30
    column: 5
  end_location:
    row: 30
    column: 6
  fix:
    patch:
      content: _i
      location:
        row: 30
        column: 5
      end_location:
        row: 30
        column: 6
    applied: false
- kind:
    UnusedLoopControlVariable: k
  location:
    row: 30
    column: 13
  end_location:
    row: 30
    column: 14
  fix:
    patch:
      content: _k
      location:
        row: 30
        column: 13
      end_location:
        row: 30
        column: 14
    applied: false

