src/snapshots/ruff__linter__tests__B009_B009_B010.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: GetAttrWithConstant
  location:
    row: 17
    column: 0
  end_location:
    row: 17
    column: 19
  fix:
    patch:
      content: foo.bar
      location:
        row: 17
        column: 0
      end_location:
        row: 17
        column: 19
    applied: false
- kind: GetAttrWithConstant
  location:
    row: 18
    column: 0
  end_location:
    row: 18
    column: 23
  fix:
    patch:
      content: foo._123abc
      location:
        row: 18
        column: 0
      end_location:
        row: 18
        column: 23
    applied: false
- kind: GetAttrWithConstant
  location:
    row: 19
    column: 0
  end_location:
    row: 19
    column: 22
  fix:
    patch:
      content: foo.abc123
      location:
        row: 19
        column: 0
      end_location:
        row: 19
        column: 22
    applied: false
- kind: GetAttrWithConstant
  location:
    row: 45
    column: 14
  end_location:
    row: 45
    column: 37
  fix:
    patch:
      content: x.some_attr
      location:
        row: 45
        column: 14
      end_location:
        row: 45
        column: 37
    applied: false

