src/snapshots/ruff__linter__tests__B011_B011.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: DoNotAssertFalse
  location:
    row: 8
    column: 8
  end_location:
    row: 8
    column: 13
  fix:
    content: raise AssertionError()
    location:
      row: 8
      column: 1
    end_location:
      row: 8
      column: 13
    applied: false
- kind: DoNotAssertFalse
  location:
    row: 10
    column: 8
  end_location:
    row: 10
    column: 13
  fix:
    content: "raise AssertionError('message')"
    location:
      row: 10
      column: 1
    end_location:
      row: 10
      column: 24
    applied: false

